# web-applications-with-fastapi-course

code/working/: .pre-commit-config.yaml  main.py  notes.md  pyproject.toml  tox.ini
code/working/data/: package.py
code/working/services/: package_service.py  user_service.py
code/working/static/: site.css
code/working/templates/: index.html
code/working/templates/home/: about.pt
code/working/templates/shared/: _layout.pt
code/working/viewmodels/account/: index_viewmodel.py  login_viewmodel.py  register_viewmodel.py
code/working/viewmodels/home/: indexviewmodel.py
code/working/viewmodels/shared/: viewmodel.py
code/working/views/: account.py  home.py  packages.py
