[project]
name = "working"
version = "0.1.0"
description = "This is worked exercise code to accompany the Talk Python FastAPI Course."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.11.0",
    "fastapi>=0.121.3",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.4.0",
    "uvicorn>=0.38.0",
]
